--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "ai-agent-frontend",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://Mesdon10.github.io/AI-Agent-front-end-page",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "i18next": "^25.6.3",
     "lucide-react": "^0.553.0",
     "react": "^19.2.0",
@@ -25,6 +29,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "vite": "^7.2.2"
   }
